src/lexer/snapshots/python_parser__lexer__tests__lex_identifiers.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "x" Id 0..1,
    "_abc" Id 2..6,
    "foo_bar" Id 7..14,
    "Foo" Id 15..18,
    "FooBar" Id 19..25,
    "__foo__" Id 26..33,
    "X" Id 34..35,
    "abc123" Id 36..42,
    "abc_123" Id 43..50,
    "aBc_123" Id 51..58,
    "" NewLine 58..58,
]
