src/lexer/snapshots/python_parser__lexer__tests__lex_indentation_mac_eol.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "def" Keyword(Def) 0..3,
    "foo" Id 4..7,
    "(" OpenParenthesis 7..8,
    ")" CloseParenthesis 8..9,
    ":" Colon 9..10,
    "\r" NewLine 10..11,
    "   " Indent 11..14,
    "return" Keyword(Return) 14..20,
    "99" Number(Decimal) 21..23,
    "\r" NewLine 23..24,
    "\r" NonLogicalNewline 24..25,
    "" Dedent 25..25,
]
