src/lexer/snapshots/python_parser__lexer__tests__lex_line_comment_long.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "99232" Number(Decimal) 0..5,
    "# foo" Comment 7..12,
    "" NewLine 12..12,
]
