src/lexer/snapshots/python_parser__lexer__tests__lex_line_comment_whitespace.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "99232" Number(Decimal) 0..5,
    "#  " Comment 7..10,
    "" NewLine 10..10,
]
