src/lexer/snapshots/python_parser__lexer__tests__lex_logical_newline_line_comment.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "#Hello" Comment 0..6,
    "\n" NonLogicalNewline 6..7,
    "#World" Comment 7..13,
    "\n" NonLogicalNewline 13..14,
]
