src/lexer/snapshots/python_parser__lexer__tests__lex_newline_in_brackets_mac_eol.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "x" Id 0..1,
    "=" Operator(Assign) 2..3,
    "[" OpenBracket 4..5,
    "\r" NonLogicalNewline 5..6,
    "\r" NonLogicalNewline 6..7,
    "1" Number(Decimal) 15..16,
    "," Comma 16..17,
    "2" Number(Decimal) 17..18,
    "\r" NonLogicalNewline 18..19,
    "," Comma 23..24,
    "(" OpenParenthesis 24..25,
    "3" Number(Decimal) 25..26,
    "," Comma 26..27,
    "\r" NonLogicalNewline 27..28,
    "4" Number(Decimal) 32..33,
    "," Comma 33..34,
    "\r" NonLogicalNewline 34..35,
    ")" CloseParenthesis 39..40,
    "," Comma 40..41,
    "{" OpenBrace 42..43,
    "\r" NonLogicalNewline 43..44,
    "5" Number(Decimal) 48..49,
    "," Comma 49..50,
    "\r" NonLogicalNewline 50..51,
    "6" Number(Decimal) 55..56,
    "," Comma 56..57,
    "7" Number(Decimal) 63..64,
    "}" CloseBrace 64..65,
    "]" CloseBracket 65..66,
    "\r" NewLine 66..67,
]
